<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegisterFragment">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/mainGreen"
        android:text="@string/registerButton"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailTextRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/text_input_background"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordTextRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/text_input_background"
        android:ems="10"
        android:hint="@string/passwordInputTextHint"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameText5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/text_input_background"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/delivery1"
        app:layout_constraintBottom_toTopOf="@+id/emailTextRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/goToLogin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>